--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -21,4 +21,32 @@
     .copyright{
         margin-left: 20px;
     }
+    header{
+        height: auto;
+    }
+    header .container{
+        flex-direction: row;
+    }
+    nav ul{
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        background-color: #fff;
+        width: 100%;
+    }
+    .logo{
+        padding-left: 20px;
+    }
+    .menuMobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+
+@media (min-width:731px){
+    nav ul{
+        display: flex !important;
+    }
 }
