--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ nav a{
     font-size:15px;
     color:#727272;
     text-decoration:none;
+    display: inline-block;
 }
 
 .menu a.active, .menu a:hover{
@@ -308,4 +309,15 @@ footer{
 }
 .copyright{
     font-size: 11px;
+}
+.menuMobile{
+    display: none;
+    width: 40px;
+    height: 40px;
+    padding-right: 20px;
+    margin: 40px 0 40px 0;
+}
+.mm_linha{
+    height: 3px;
+    background-color: #39aae1;
 }
